# agri-sense

./: .env.example  .gitignore  README.md  openapi.json  pyproject.toml  server.py  tools.yaml
.agents/rules/: project-context.md
.agents/skills/mcp-toolbox-postgres/: SKILL.md
.agents/skills/repo-research/: SKILL.md
.specify/templates/: plan-template.md
frontend/: app.js  index.html  style.css
frontend/.adk/: session.db
plant_health/: agent.py
plant_health/.adk/: session.db
scripts/: setup_database.sh
scripts/.adk/: session.db
tests/.adk/: session.db
